# Omni

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/omni-channels/: Cargo.toml
crates/omni-channels/src/: bindings.rs  bluebubbles.rs  common.rs  discord.rs  feishu.rs  google_chat.rs  imessage.rs  irc_channel.rs  lib.rs  line.rs  manager.rs  matrix.rs  mattermost.rs  nextcloud_talk.rs  nostr_channel.rs  router.rs  signal.rs  slack.rs  synology_chat.rs  teams.rs  telegram.rs  twitch.rs  twitter.rs  urbit.rs  webchat.rs  webhook_server.rs  whatsapp_web.rs  zalo.rs
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs
crates/omni-cli/src/commands/: chat_cmd.rs  config_cmd.rs  mod.rs  status_cmd.rs
crates/omni-core/: Cargo.toml
crates/omni-core/migrations/: 001_initial.sql  002_permission_policy_usage.sql  003_channel_instances.sql  004_channel_bindings.sql  005_extension_instances.sql
crates/omni-core/src/: config.rs  database.rs  error.rs  events.rs  lib.rs  logging.rs  paths.rs
crates/omni-core/tests/: startup_test.rs
crates/omni-extensions/: Cargo.toml
crates/omni-extensions/src/: error.rs  host.rs  lib.rs  manifest.rs  sandbox.rs  storage.rs
crates/omni-extensions/src/flowchart/: engine.rs  error.rs  expression.rs  mod.rs  registry.rs  trigger.rs  types.rs
crates/omni-extensions/tests/: integration.rs
crates/omni-extensions/tests/fixtures/com.omni.test-hello/: hello.wasm  hello.wat  omni-extension.toml
crates/omni-guardian/: Cargo.toml
crates/omni-guardian/benches/: scan_benchmarks.rs
crates/omni-guardian/data/: guardian-signatures.json
crates/omni-guardian/src/: error.rs  heuristics.rs  lib.rs  ml.rs  pipeline.rs  policy.rs  signatures.rs  types.rs
crates/omni-guardian/tests/: adversarial_test.rs  false_positive_test.rs
crates/omni-llm/: Cargo.toml
crates/omni-llm/src/: agent.rs  bridge.rs  credentials.rs  error.rs  guardian_bridge.rs  hooks.rs  lib.rs  rotation.rs  system_prompt.rs  types.rs
crates/omni-llm/src/mcp/: client.rs  mod.rs  protocol.rs  transport.rs
crates/omni-llm/src/providers/: anthropic.rs  bedrock.rs  custom.rs  google.rs  mod.rs  ollama.rs  openai.rs  openai_ws.rs
crates/omni-llm/src/tools/: browser.rs  clipboard.rs  code_search.rs  cron.rs  debugger.rs  exec.rs  fs.rs  git.rs  image.rs  memory.rs  message.rs  mod.rs  notify.rs  repl.rs  sessions.rs  sub_agent.rs  testing.rs  util.rs  web.rs
crates/omni-llm/src/tools/app_interact/: AUDIT_BUGS.md  mod.rs  platform.rs  security.rs  stub.rs  types.rs  windows.rs
crates/omni-llm/src/tools/app_interact/windows/: chromium.rs  dpi.rs  element_ref.rs  focus.rs  helpers.rs  input.rs  interaction.rs  mod.rs  screenshot.rs  tree.rs
crates/omni-llm/src/tools/lsp/: client.rs  mod.rs  protocol.rs
crates/omni-permissions/: Cargo.toml
crates/omni-permissions/src/: audit.rs  capability.rs  lib.rs  policy.rs  scope.rs
crates/omni-permissions/tests/: integration.rs
crates/omni-platform/: Cargo.toml
crates/omni-platform/src/: lib.rs
crates/omni-sdk/: Cargo.toml
crates/omni-sdk/src/: ffi.rs  lib.rs
extension-examples/: README.md  SDK-REFERENCE.md  build.ps1  build.sh
extension-examples/template/: Cargo.toml  omni-extension.toml
extension-examples/template/src/: lib.rs
extension-examples/word-tools/: Cargo.toml  omni-extension.toml
extension-examples/word-tools/src/: lib.rs
sidecar/browser/: bridge.js  package-lock.json  package.json
sidecar/whatsapp/: bridge.js  package-lock.json  package.json
supabase/: config.toml  seed.sql
supabase/functions/_shared/: signatures.ts  types.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/scan-ai/: index.ts
supabase/functions/scan-extension/: index.ts
supabase/functions/scan-heuristics/: index.ts
supabase/functions/scan-sandbox/: index.ts
supabase/functions/scan-signatures/: index.ts
supabase/functions/schedule-rescan/: index.ts
supabase/migrations/: 00001_profiles.sql  00002_extensions.sql  00003_reviews.sql  00004_downloads.sql  00005_scan_results.sql  00006_api_keys.sql  00007_rls_policies.sql  00008_forum_and_profiles.sql  00009_app_releases.sql  00010_security_fixes.sql  00011_rls_performance_fixes.sql  00012_deep_security_audit_fixes.sql  00013_donations.sql  00014_donation_stats_security_fix.sql  00015_rls_performance_fixes.sql  00016_fix_latest_version_trigger.sql  20260228_anti_bot.sql  20260228_extension_images.sql  20260228_extension_moderation.sql  20260228_fix_latest_version.sql  20260228_fix_published_defaults.sql  20260302_blog_posts.sql  20260302_blog_posts_rls_fix.sql  20260303_blog_posts_fk_fix.sql
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  mcd_jobs_extract.py  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: callbacks.rs  commands.rs  dto.rs  events.rs  lib.rs  main.rs  marketplace.rs  state.rs
ui/src/components/: UpdateBanner.tsx
ui/src/components/action-feed/: ActionDetail.tsx  ActionEntry.tsx  ActionFeed.tsx
ui/src/components/channels/: AddChannelWizard.tsx  ChannelConfigDrawer.tsx  ChannelIcon.tsx  ChannelPanel.tsx  ChannelSetupCard.tsx  EmptyChannelState.tsx  InlineBindingEditor.tsx  channelMeta.ts
ui/src/components/chat/: ChatPanel.tsx  DiffViewer.tsx  InputBar.tsx  MessageBubble.tsx  SessionSidebar.tsx  StreamingIndicator.tsx  ToolCallCard.tsx
ui/src/components/extensions/: ExtensionCard.tsx  (+2 more)
ui/src/hooks/: useOmniEvents.ts
ui/src/lib/: example-flowcharts.ts  formatters.ts  tauri-commands.ts
ui/src/stores/: bindingStore.ts  channelStore.ts  chatStore.ts  eventStore.ts  extensionStore.ts  flowchartStore.ts  instanceStore.ts  marketplaceStore.ts  mcpStore.ts  providerStore.ts  settingsStore.ts  updateStore.ts
ui/src/styles/: globals.css
website/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json
website/src/: middleware.ts
website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
website/src/lib/: constants.ts  utils.ts
(+223 files in other folders)
