[package]
name = "omni-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
keyring = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
tokio = { workspace = true, features = ["test-util", "macros"] }
