[package]
name = "omni-extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-core = { path = "../omni-core" }
omni-permissions = { path = "../omni-permissions" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
semver = { workspace = true }
jsonschema = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
url = "2"
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
wat = { workspace = true }
