[package]
name = "omni-permissions"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-core = { path = "../omni-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
url = "2"
dirs = { workspace = true }
shellexpand = "3"
csv = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
