[package]
name = "omni-my-extension"      # TODO: Change to your extension name
version = "0.1.0"
edition = "2021"
description = "My Omni extension" # TODO: Add your description

[lib]
crate-type = ["cdylib"]

[dependencies]
omni-sdk = { path = "../../crates/omni-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
