[package]
name = "omni-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "omni_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

futures = "0.3"

reqwest = { version = "0.12", features = ["json", "native-tls"] }
semver = "1"
toml = "0.8"

omni-core = { path = "../../crates/omni-core" }
omni-permissions = { path = "../../crates/omni-permissions" }
omni-guardian = { path = "../../crates/omni-guardian" }
omni-extensions = { path = "../../crates/omni-extensions" }
omni-llm = { path = "../../crates/omni-llm" }
omni-channels = { path = "../../crates/omni-channels" }
